tests/example_pods_w_same_owner_and_labels_gap_with_policy_selector_not_in_gap/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: use_common_labels_same_values
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          security: internal
    ports:
    - port: 8050
      protocol: TCP

---
